force-app/main/default/objects/Case/fields/AI_Guardrail_Approver__c.field-meta.xml
<CustomField>
    <fullName>AI_Guardrail_Approver__c</fullName>
    <description
  >Role/alias of the guardrail approver for this Case. Role/alias only — no full names (PII-safe). Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >Role/alias of the guardrail approver (PII-safe). Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Guardrail Approver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>