force-app/main/default/objects/Case/fields/AI_Guardrail_Decision_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Guardrail_Decision_At__c</fullName>
    <description
  >Timestamp of the most recent guardrail approval decision (approve/reject/escalate/auto-approve) for this Case. Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >When the AI guardrail decision was recorded. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Guardrail Decision At</label>
    <type>DateTime</type>
</CustomField>