force-app/main/default/objects/Case/fields/AI_Guardrail_Resume_Token__c.field-meta.xml
<CustomField>
    <fullName>AI_Guardrail_Resume_Token__c</fullName>
    <description
  >Workflow-scoped callback token minted by the AI API; presented by the approval-completion Flow to authenticate the resume callout. Short-lived.</description>
    <inlineHelpText
  >Short-lived resume callback token. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Guardrail Resume Token</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>