force-app/main/default/objects/Case/fields/AI_Guardrail_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Guardrail_Status__c</fullName>
    <description
  >Compliance &amp; guardrail approval state for this Case (Node 6). Stamped by the AI API and the Case Approval Process: pending_approval, approved, rejected, escalated, auto_approved.</description>
    <inlineHelpText
  >AI guardrail approval status. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Guardrail Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending_approval</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>escalated</fullName>
            </value>
            <value>
                <fullName>auto_approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>