force-app/main/default/objects/Case/fields/AI_Orchestration_Console_URL__c.field-meta.xml
<CustomField>
    <fullName>AI_Orchestration_Console_URL__c</fullName>
    <description
  >Deep link to the AI orchestration console view for this Case's workflow run. Written back by the NestJS AI API when a UI base URL is configured.</description>
    <inlineHelpText
  >Deep link to the AI orchestration console for this Case. Managed by the AI API.</inlineHelpText>
    <label>AI Orchestration Console URL</label>
    <type>Url</type>
</CustomField>