force-app/main/default/objects/Case/fields/AI_Orchestration_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Orchestration_Status__c</fullName>
    <description
  >Operator orchestration control flag for this Case (RC-1 / Node 6 6c). active = AI orchestration runs normally; stopped_by_user = a service rep has taken over and the AI must stop (no new triggers, no resume after a late approval); suppressed = orchestration administratively disabled. Defaults to active. Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >AI orchestration control state. active by default; stopped_by_user halts AI takeover for this Case. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Orchestration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <default>true</default>
                <label>active</label>
            </value>
            <value>
                <fullName>stopped_by_user</fullName>
            </value>
            <value>
                <fullName>suppressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>