force-app/main/default/objects/Case/fields/AI_Orchestrator_Verdict_Headline__c.field-meta.xml
<CustomField>
    <fullName>AI_Orchestrator_Verdict_Headline__c</fullName>
    <description
  >One-line final verdict headline from the AI orchestrator rollup for this Case. Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >Final verdict headline from the AI orchestrator. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Orchestrator Verdict Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>