force-app/main/default/objects/Case/fields/AI_Orchestrator_Verdict_Highlights__c.field-meta.xml
<CustomField>
    <fullName>AI_Orchestrator_Verdict_Highlights__c</fullName>
    <description
  >Key highlights from the AI orchestrator final verdict rollup for this Case. Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >Key highlights from the AI orchestrator verdict. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Orchestrator Verdict Highlights</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>