force-app/main/default/objects/Case/fields/AI_Orchestrator_Verdict_Steps__c.field-meta.xml
<CustomField>
    <fullName>AI_Orchestrator_Verdict_Steps__c</fullName>
    <description
  >Recommended next steps from the AI orchestrator final verdict rollup for this Case. Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >Recommended next steps from the AI orchestrator. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Orchestrator Verdict Steps</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>