force-app/main/default/objects/Case/fields/AI_Orchestrator_Verdict_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Orchestrator_Verdict_Summary__c</fullName>
    <description
  >Final verdict summary narrative from the AI orchestrator rollup for this Case. Managed by the AI API; do not edit manually.</description>
    <inlineHelpText
  >Final verdict summary from the AI orchestrator. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Orchestrator Verdict Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>