force-app/main/default/objects/Case/fields/AI_Parts_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Parts_Plan_Summary__c</fullName>
    <description
  >Sanitized parts logistics summary from the AI orchestrator. No PII; for agent and ops visibility on the Case.</description>
    <inlineHelpText
  >AI-generated parts availability and ETA summary. Managed by the AI API.</inlineHelpText>
    <label>AI Parts Plan Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>