force-app/main/default/objects/Case/fields/AI_Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Status__c</fullName>
    <description
  >Latest lifecycle status of the external AI triage orchestration for this Case (assigned, running, waiting_approval, done, rejected, failed). Written back by the NestJS AI API.</description>
    <inlineHelpText
  >Latest AI triage orchestration status. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Triage Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>