force-app/main/default/objects/Case/fields/AI_Triage_UI_URL__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_UI_URL__c</fullName>
    <description
  >Deep link to the read-only first-node orchestration progress view for this Case. Written back by the NestJS AI API when a UI base URL is configured.</description>
    <inlineHelpText
  >Read-only AI triage progress view for this Case. Managed by the AI API.</inlineHelpText>
    <label>AI Triage UI URL</label>
    <type>Url</type>
</CustomField>