force-app/main/default/objects/Case/fields/AI_Triage_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Updated_At__c</fullName>
    <description
  >Timestamp of the most recent external AI triage orchestration status update for this Case. Written back by the NestJS AI API.</description>
    <inlineHelpText
  >When the AI triage status was last updated. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Triage Updated At</label>
    <type>DateTime</type>
</CustomField>