force-app/main/default/objects/Case/fields/AI_Triage_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Workflow_Id__c</fullName>
    <description
  >Correlation id (wf-&lt;uuid&gt;) of the external AI triage orchestration workflow for this Case. Written back by the NestJS AI API so the historical orchestration view is resolvable from the Case after an AI API restart.</description>
    <externalId>true</externalId>
    <inlineHelpText
  >External AI triage workflow id. Managed by the AI API; do not edit manually.</inlineHelpText>
    <label>AI Triage Workflow Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>