force-app/main/default/objects/Case/fields/Parts_Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Parts_Fulfillment_Status__c</fullName>
    <description
  >Parts readiness for this Case as determined by the AI orchestrator and fulfillment actions.</description>
    <inlineHelpText
  >Inventory fulfillment state: planned, backorder, transfer, or ready.</inlineHelpText>
    <label>Parts Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Backorder Requested</fullName>
            </value>
            <value>
                <fullName>Transfer Pending</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>