force-app/main/default/objects/Case/fields/Service_Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Ship_To_City__c</fullName>
    <description
  >Destination city for spare parts delivery ETA routing. Defaults from Account Shipping when blank.</description>
    <inlineHelpText
  >City where replacement parts should be shipped for this Case.</inlineHelpText>
    <label>Service Ship To City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>