force-app/main/default/objects/Case/fields/Service_Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Ship_To_Country__c</fullName>
    <description
  >Destination country for spare parts delivery ETA routing.</description>
    <inlineHelpText>Country for parts delivery (e.g. US).</inlineHelpText>
    <label>Service Ship To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>