force-app/main/default/objects/Case/fields/Service_Ship_To_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Ship_To_State__c</fullName>
    <description
  >Destination state/province for spare parts delivery ETA routing.</description>
    <inlineHelpText>State or province for parts delivery.</inlineHelpText>
    <label>Service Ship To State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>